Fix broken link

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">NVivo</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.com/nvivo1/" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/nvivo1/" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">Two 2-hour modules introducing NVivo for computer-assisted qualitative data analysis.</p>
                 </div>
               </li>
