add full list, link between pages

--- a/all.html
+++ b/all.html
@@ -39,28 +39,137 @@
 
           <article class="profile-menu" id="menu">
             <nav class="menu-navigation">
-              <ul class="menu-navigation-list">
-				<li class="menu-navigation-list-item"><a href="#core">Core skills</a></li>
-				<li class="menu-navigation-list-item"><a href="#ds">Digital scholarship</a></li>
-                <li class="menu-navigation-list-item"><a href="#data">Data analysis and visualization</a></li>
-                <li class="menu-navigation-list-item"><a href="#gis">Geographic information systems (GIS)</a></li>
-				<li class="menu-navigation-list-item"><a href="#review">Reviews</a></li>
-                <li class="menu-navigation-list-item"><a href="#writing">Writing</a></li>
-                <li class="menu-navigation-list-item"><a href="#citation">Citation management</a></li>
-              </ul>
-			  <br/>
-		  <p>For currently scheduled workshops visit <a href="https://events.library.ubc.ca/">https://events.library.ubc.ca/</a></p>
-			<p>Links below are to online workshop materials, when available.   
+				<p>For currently scheduled workshops visit <a href="https://events.library.ubc.ca/">https://events.library.ubc.ca/</a></p><br/>
+		  <p>The format and amount of online material varies from one workshop to another. For a list of workshops with extensive online content suitable for self-paced learning see <a href="index.html">selected workshop materials in open formats</a>.</p>   
             </nav>
 
-			<div id="core" class="menu-category">
-			<h3 class="menu-category-name">Core skills</h3>
-			<ul>
-				<li>Introduction to Git and GitHub</li>
-				<li>Introduction to the Unix Shell</li>
-			</ul>
-			</div>
-			
+			<div id="ds" class="menu-category">
+			<h3 class="menu-category-name">Core skills in Digital scholarship</h3>
+                                    <ul>
+                                        <li>
+                                            <a href="https://ubc-library-rc.github.io/intro-git/">Introduction to Git and GitHub</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://ubc-library-rc.github.io/intro-shell/content/04-automating-with-loops.html">Introduction to the Unix Shell</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://ubc-library-rc.github.io/intro-api/">Introduction to APIs</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://osf.io/ht9qn/">Introduction to the OSF</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://ubc-library-rc.github.io/intro-project-sites/">Building a project website with Jekyll and Github Pages</a>
+                                        </li>
+                                        <li>
+                                            <a href="https://ubc-library-rc.github.io/intro-web-scraping/">Introduction to Web Scraping</a>
+                                        </li>
+                                    </ul></div>
+<div id="data" class="menu-category">
+
+									<h3 class="menu-category-name">Data analysis and visualization</h3>
+                                            <ul>
+                                                <li>
+                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/nvivo-part-1-getting-started-with-nvivo/">NVivo part 1: getting started with NVivo</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/nvivo-part-2-classification-and-datasets/">NVivo part 2: classification and datasets</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/literature-reviews-analyzing-with-nvivo/">Literature Reviews: Analyzing (with NVivo)</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://ubc-library-rc.github.io/intro-python/">Introduction to Python for data analysis</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://ubc-library-rc.github.io/r-rstudio/">Introduction to R and RStudio</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://ubc-library-rc.github.io/r-stats/">R for statistical analysis</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/introduction-to-spss-for-statistical-analysis/">Introduction to SPSS for statistical analysis</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/best-practices-in-research-data-management/">Best practices in Research Data Management</a>
+                                                </li>
+                                            </ul></div>
+<div id="gis" class="menu-category">
+
+											<h3 class="menu-category-name">Geographic information systems (GIS)</h3>
+                                            <ul>
+                                                <li>
+                                                    <a href="https://ubc-library-rc.github.io/map-projections/">Understanding Spatial Data: Map Projections</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://ubc-library-rc.github.io/intro-AGOL/">Intro to ArcGIS Online and Story Maps</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://ubc-library-rc.github.io/qgis-walkability/">Spatial Network Analysis with QGIS</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://ubc-library-rc.github.io/gis-with-R/">Intro to Spatial Data Analysis with R</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://ubc-library-rc.github.io/Geocoding-Web-Mapping-with-Python/">Geocoding and Web Mapping with Python</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://ubc-library-rc.github.io/Geospatial-Analysis-Visualization-with-Python/">Geospatial Analysis and Visualization with Python</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://ubc-library-rc.github.io/gis-intro-leaflet/">Web mapping with LeafletJS</a>
+                                                </li>
+                                            </ul></div>
+											<div id="review" class="menu-category">
+
+											<h3 class="menu-category-name">Literature, systematic, and scoping reviews</h3>
+                                            <ul>
+                                                <li>
+                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/literature-reviews-searching-and-keeping-track/">Literature Reviews: Searching and Keeping Track</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/literature-reviews-analyzing-with-nvivo/">Literature Reviews: Analyzing (with NVivo)</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/literature-review-writing-workshops/">Literature Reviews: Writing Workshop</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://researchcommons.library.ubc.ca/systematic-reviews/" data-rich-text-format-boundary="true">Systematic and Scoping Reviews workshop</a>
+                                                </li>
+                                            </ul></div>
+<div id="thesis" class="menu-category">
+
+											<h3 class="menu-category-name">Thesis formatting and copyright</h3>
+                                           <ul>
+                                                <li>
+                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/thesis-formatting-tips-tricks-and-resources/">Dissertation and Thesis Formatting: Strategies For Successful Submission</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/copyright-workshop-graduate/">Copyright for Graduate Students</a>
+                                                </li>
+                                            </ul></div>
+<div id="citation" class="menu-category">
+
+											<h3 class="menu-category-name">Citation management</h3>
+                                            <ul>
+                                            <li>
+                                                <a href="https://research-commons-2019.sites.olt.ubc.ca/beginner/">Choose the right Citation Management Tool for your Research (Beginner)</a>
+                                            </li>
+                                            <li>
+                                                <a href="https://research-commons-2019.sites.olt.ubc.ca/refworks/">Citation Management using RefWorks (Intermediate)</a>
+                                            </li>
+                                            <li>
+                                                <a href="https://ubc-library-rc.github.io/intro-zotero/">Citation Management using Zotero (Intermediate)</a>
+                                            </li>
+                                            <li>
+                                                <a href="https://ubc-library-rc.github.io/intro-mendeley/">Citation Management using Mendeley (Intermediate)</a>
+                                            </li>
+                                            <li>
+                                                <a href="http://Citation Management for Researchers Using Multilingual Materials, Part 1" data-wplink-url-error="true">Citation Management for Researchers Using Multilingual Materials, Part 1</a>
+                                            </li>
+                                            <li>Citation Management for Researchers Using Multilingual Materials, Part 2</li>
+                                        </ul></div>
+                                   		
 
           </article>
 
@@ -72,11 +181,9 @@
     <footer class="footer">
       <nav class="footer-navigation">
         <ul class="footer-navigation-list">
-          <li class="footer-navigation-item"><a href="https://squareup.com/developers">Square Developer</a></li>
-          <li class="footer-navigation-item"><a href="https://github.com/cashapp">Cash App</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/security">Security</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/legal/privacy">Privacy</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/help" class="track">Help Center</a></li>
+          <li class="footer-navigation-item"><a href="https://ubc-library-rc.github.io/">Thing one</a></li>
+          <li class="footer-navigation-item"><a href="https://github.com/cashapp">Thing two</a></li>
+          <li class="footer-navigation-item"><a href="https://squareup.com/security">Thing three</a></li>
         </ul>
       </nav>
     </footer>
