--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <article class="profile-menu" id="menu">
             <nav class="menu-navigation">
               <ul class="menu-navigation-list">
-				<li class="menu-navigation-list-item"><a href="#ds">Digital scholarship</a></li>
+				<li class="menu-navigation-list-item"><a href="#ds">Core skills in Digital scholarship</a></li>
                 <li class="menu-navigation-list-item"><a href="#data">Data analysis and visualization</a></li>
                 <li class="menu-navigation-list-item"><a href="#gis">Geographic information systems (GIS)</a></li>
               </ul>
@@ -49,7 +49,7 @@
             </nav>
 
 			<div id="ds" class="menu-category">
-              <h3 class="menu-category-name">Digital scholarship</h3>
+              <h3 class="menu-category-name">Core skills in Digital scholarship</h3>
               <ol class="menu-category-list">
               <li class="menu-item">
                 <div class="menu-item-info">
@@ -61,7 +61,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">Introduction to Docker</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-docker" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-docker" target="_blank">view in GitHub</a></span>
                   <p class="menu-item-description">Introduces the set of virtualization tools referred to as Docker, to create and share small reproducible computing environments.</p>
                 </div>
               </li>
@@ -69,14 +69,14 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">Introduction to Git and GitHub</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-git" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-git" target="_blank">view in GitHub</a></span>
                   <p class="menu-item-description">Adapted from the Carpentries, introduces the basics of Git and GitHub for version control and collaboration.</p>
                 </div>
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">Introduction to the Unix shell</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-shell" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-shell" target="_blank">view in GitHub</a></span>
                   <p class="menu-item-description">Adapted from the Carpentries, this workshop is intended to orient complete beginners to the Unix shell.</p>
                 </div>
               </li>
@@ -88,22 +88,15 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">Intro to data viz with Tableau</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-data-viz/" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-data-viz/" target="_blank">view in GitHub</a></span>
                   <p class="menu-item-description">An introduction to data visualization using Tableau software. Participants learn to recognize the characteristics of effective visualizations, format data, and create simple graphs in Tableau.</p>
                 </div>
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">NVivo</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.com/nvivo1/" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">Two 2-hour modules introducing NVivo for computer-assisted qualitative data analysis.</p>
-                </div>
-              </li>
-              <li class="menu-item">
-                <div class="menu-item-info">
                   <h4 class="menu-item-name">R</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/r-rstudio/" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">Three 2-hour modules on using the R programming language for quantitative data analysis and visualization.</p>
+                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/r-rstudio/" target="_blank">view in GitHub</a></span>
+                  <p class="menu-item-description">Three 2-hour modules on using the R programming language. Includes an introduction to R and RStudio, tools for statistical analysis, and data visualization.</p>
                 </div>
               </li>
               </ol>
@@ -113,16 +106,16 @@
               <ol class="menu-category-list">
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">PonyDebugger</h4>
-                  <span class="menu-item-price"><a href="https://github.com/square/PonyDebugger" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">Remote network and data debugging for your native iOS app using Chrome Developer Tools</p>
+                  <h4 class="menu-item-name">Understanding spatial data: map projections</h4>
+                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/map-projections/" target="_blank">view in GitHub</a></span>
+				  <p class="menu-item-description">Familiarize participants with foundational knowledge for working with spatial data.</p>
                 </div>
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">spacecommander</h4>
-                  <span class="menu-item-price"><a href="https://github.com/square/spacecommander" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">Commit fully-formatted Objective-C as a team without even trying.</p>
+                  <h4 class="menu-item-name">Visualizing data in ArcGIS Online</h4>
+                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-AGOL/" target="_blank">view in GitHub</a></span>
+                  <p class="menu-item-description">Introduces complete beginners to the ArcGIS Online platform and tools. This workshop is intended for those unfamiliar with GIS software or code but who want to be able to create a map, add their own data, and configure a Story Map.</p>
                 </div>
               </li>
               </ol>
@@ -138,12 +131,10 @@
     <footer class="footer">
       <nav class="footer-navigation">
         <ul class="footer-navigation-list">
-          <li class="footer-navigation-item"><a href="https://squareup.com/developers">Square Developer</a></li>
-          <li class="footer-navigation-item"><a href="https://github.com/cashapp">Cash App</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/security">Security</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/legal/privacy">Privacy</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/help" class="track">Help Center</a></li>
-        </ul>
+   <li class="footer-navigation-item"><a href="https://ubc-library-rc.github.io/">Thing one</a></li>
+          <li class="footer-navigation-item"><a href="https://github.com/cashapp">Thing two</a></li>
+          <li class="footer-navigation-item"><a href="https://squareup.com/security">Thing three</a></li>
+       </ul>
       </nav>
     </footer>
 
