--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section class="profile-masthead" id="masthead">
           <header class="profile-logo">
             <div class="profile-logo-image">
-              <img alt="UBC Library Research Commons" src="/images/ubc-logo.png" />
+              <img alt="UBC Library Research Commons" src="/images/rc-logo-square.png" />
             </div>
             <div class="profile-name">
               <h1>UBC Library Research Commons</h1> 
