--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <article class="profile-menu" id="menu">
             <nav class="menu-navigation">
               <ul class="menu-navigation-list">
-				<li class="menu-navigation-list-item"><a href="#ds">Core skills in Digital scholarship</a></li>
+				<li class="menu-navigation-list-item"><a href="#ds">Core skills in Digital Scholarship</a></li>
                 <li class="menu-navigation-list-item"><a href="#data">Data analysis and visualization</a></li>
                 <li class="menu-navigation-list-item"><a href="#gis">Geographic information systems (GIS)</a></li>
               </ul>
