correct capitalization for "Digital Scholarship"

--- a/all.html
+++ b/all.html
@@ -44,7 +44,7 @@
             </nav>
 
 			<div id="ds" class="menu-category">
-			<h3 class="menu-category-name">Core skills in Digital scholarship</h3>
+			<h3 class="menu-category-name">Core skills in Digital Scholarship</h3>
                                     <ul>
                                         <li>
                                             <a href="https://ubc-library-rc.github.io/intro-git/">Introduction to Git and GitHub</a>
