add links, reorganize list

--- a/index.html
+++ b/index.html
@@ -60,23 +60,23 @@
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">Introduction to Docker</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-docker" target="_blank">view in GitHub</a></span>
+                  <h4 class="menu-item-name"><a href="https://ubc-library-rc.github.io/intro-docker" target="_blank">Introduction to Docker</a></h4>
+                  <span class="menu-item-price"><a href="https://github.com/ubc-library-rc/intro-docker" target="_blank">view in GitHub</a></span>
                   <p class="menu-item-description">Introduces the set of virtualization tools referred to as Docker, to create and share small reproducible computing environments.</p>
                 </div>
               </li>
 
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">Introduction to Git and GitHub</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-git" target="_blank">view in GitHub</a></span>
+                  <h4 class="menu-item-name"><a href="https://ubc-library-rc.github.io/" target="_blank">Introduction to Git and GitHub</a></h4>
+                  <span class="menu-item-price"><a href="https://github.com/ubc-library-rc/intro-git" target="_blank">view in GitHub</a></span>
                   <p class="menu-item-description">Adapted from the Carpentries, introduces the basics of Git and GitHub for version control and collaboration.</p>
                 </div>
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">Introduction to the Unix shell</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-shell" target="_blank">view in GitHub</a></span>
+                  <h4 class="menu-item-name"><a href="https://ubc-library-rc.github.io/intro-shell/" target="_blank">Introduction to the Unix shell</a></h4>
+                  <span class="menu-item-price"><a href="https://github.com/ubc-library-rc/intro-shell" target="_blank">view in GitHub</a></span>
                   <p class="menu-item-description">Adapted from the Carpentries, this workshop is intended to orient complete beginners to the Unix shell.</p>
                 </div>
               </li>
@@ -87,15 +87,22 @@
               <ol class="menu-category-list">
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">Intro to data viz with Tableau</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-data-viz/" target="_blank">view in GitHub</a></span>
+                  <h4 class="menu-item-name"><a href="https://ubc-library-rc.github.io/intro-data-viz/" target="_blank">Intro to data viz with Tableau</a></h4>
+                  <span class="menu-item-price"><a href="https://github.com/ubc-library-rc/intro-data-viz/" target="_blank">view in GitHub</a></span>
                   <p class="menu-item-description">An introduction to data visualization using Tableau software. Participants learn to recognize the characteristics of effective visualizations, format data, and create simple graphs in Tableau.</p>
                 </div>
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">R</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/r-rstudio/" target="_blank">view in GitHub</a></span>
+					<h4 class="menu-item-name"><a href="https://ubc-library-rc.github.io/tableau-dashboard/" target="_blank">Dashboards with Tableau</a></h4>
+                  <span class="menu-item-price"><a href="https://github.com/ubc-library-rc/tableau-dashboard/" target="_blank">view in GitHub</a></span>
+                  <p class="menu-item-description">Learn to combine graphs and other elements to create interactive dashboards. Participants will connect to multiple data sources, apply calculations, and assemble a simple dashboard.</p>
+                </div>
+              </li>
+              <li class="menu-item">
+                <div class="menu-item-info">
+                  <h4 class="menu-item-name"><a href="https://ubc-library-rc.github.io/data-analysis-r/" target="_blank">Data Analysis in R</a></h4>
+                  <span class="menu-item-price"><a href="https://github.com/ubc-library-rc/data-analysis-r/" target="_blank">view in GitHub</a></span>
                   <p class="menu-item-description">Three 2-hour modules on using the R programming language. Includes an introduction to R and RStudio, tools for statistical analysis, and data visualization.</p>
                 </div>
               </li>
@@ -106,15 +113,15 @@
               <ol class="menu-category-list">
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">Understanding spatial data: map projections</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/map-projections/" target="_blank">view in GitHub</a></span>
+                  <h4 class="menu-item-name"><a href="https://ubc-library-rc.github.io/map-projections/" target="_blank">Understanding spatial data: map projections</a></h4>
+                  <span class="menu-item-price"><a href="https://github.com/ubc-library-rc/map-projections/" target="_blank">view in GitHub</a></span>
 				  <p class="menu-item-description">Familiarize participants with foundational knowledge for working with spatial data.</p>
                 </div>
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">Visualizing data in ArcGIS Online</h4>
-                  <span class="menu-item-price"><a href="https://ubc-library-rc.github.io/intro-AGOL/" target="_blank">view in GitHub</a></span>
+                  <h4 class="menu-item-name"><a href="https://ubc-library-rc.github.io/intro-AGOL/" target="_blank">Visualizing data in ArcGIS Online</a></h4>
+                  <span class="menu-item-price"><a href="https://github.com/ubc-library-rc/intro-AGOL/" target="_blank">view in GitHub</a></span>
                   <p class="menu-item-description">Introduces complete beginners to the ArcGIS Online platform and tools. This workshop is intended for those unfamiliar with GIS software or code but who want to be able to create a map, add their own data, and configure a Story Map.</p>
                 </div>
               </li>
