--- a/all.html
+++ b/all.html
@@ -56,9 +56,6 @@
                                             <a href="https://ubc-library-rc.github.io/intro-api/">Introduction to APIs</a>
                                         </li>
                                         <li>
-                                            <a href="https://osf.io/ht9qn/">Introduction to the OSF</a>
-                                        </li>
-                                        <li>
                                             <a href="https://ubc-library-rc.github.io/intro-project-sites/">Building a project website with Jekyll and Github Pages</a>
                                         </li>
                                         <li>
@@ -70,30 +67,21 @@
 									<h3 class="menu-category-name">Data analysis and visualization</h3>
                                             <ul>
                                                 <li>
-                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/nvivo-part-1-getting-started-with-nvivo/">NVivo part 1: getting started with NVivo</a>
+                                                    <a href="https://ubc-library-rc.github.io/nvivo1">NVivo (qualitative data analysis, two modules)</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/nvivo-part-2-classification-and-datasets/">NVivo part 2: classification and datasets</a>
+                                                    <a href="https://ubc-library-rc.github.io/data-analysis-r/">Data Analysis and Visualization in R (three modules)</a>
                                                 </li>
-                                                <li>
-                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/literature-reviews-analyzing-with-nvivo/">Literature Reviews: Analyzing (with NVivo)</a>
-                                                </li>
+												<li><a href="https://ubc-library-rc.github.io/intro-data-viz/">Intro to data visualization with Tableau</a></li>
+												<li><a href="https://ubc-library-rc.github.io/tableau-dashboard/">Designing dashboards with Tableau</a></li>
                                                 <li>
                                                     <a href="https://ubc-library-rc.github.io/intro-python/">Introduction to Python for data analysis</a>
                                                 </li>
                                                 <li>
-                                                    <a href="https://ubc-library-rc.github.io/r-rstudio/">Introduction to R and RStudio</a>
-                                                </li>
-                                                <li>
-                                                    <a href="https://ubc-library-rc.github.io/r-stats/">R for statistical analysis</a>
-                                                </li>
-                                                <li>
                                                     <a href="https://research-commons-2019.sites.olt.ubc.ca/introduction-to-spss-for-statistical-analysis/">Introduction to SPSS for statistical analysis</a>
                                                 </li>
-                                                <li>
-                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/best-practices-in-research-data-management/">Best practices in Research Data Management</a>
-                                                </li>
                                             </ul></div>
+
 <div id="gis" class="menu-category">
 
 											<h3 class="menu-category-name">Geographic information systems (GIS)</h3>
@@ -120,8 +108,21 @@
                                                     <a href="https://ubc-library-rc.github.io/gis-intro-leaflet/">Web mapping with LeafletJS</a>
                                                 </li>
                                             </ul></div>
-											<div id="review" class="menu-category">
+											<div id="rdm" class="menu-category">
 
+									<h3 class="menu-category-name">Research Data Management</h3>
+                                            <ul>
+                                                <li>
+                                                    <a href="https://research-commons-2019.sites.olt.ubc.ca/best-practices-in-research-data-management/">Best practices in Research Data Management</a>
+                                                </li>
+                                                <li>
+                                                    <a href="https://ubc-library-rc.github.io/intro-metadata/">Metadata basics: describing research data</a>
+                                                </li>
+                                        <li>
+                                            <a href="https://osf.io/ht9qn/">Introduction to the OSF</a>
+                                        </li>
+                                            </ul></div>
+											<div id="review" class="menu-category">
 											<h3 class="menu-category-name">Literature, systematic, and scoping reviews</h3>
                                             <ul>
                                                 <li>
