--- a/all.html
+++ b/all.html
@@ -166,9 +166,10 @@
                                                 <a href="https://ubc-library-rc.github.io/intro-mendeley/">Citation Management using Mendeley (Intermediate)</a>
                                             </li>
                                             <li>
-                                                <a href="http://Citation Management for Researchers Using Multilingual Materials, Part 1" data-wplink-url-error="true">Citation Management for Researchers Using Multilingual Materials, Part 1</a>
+                                                <a href="https://researchcommons.library.ubc.ca/jurism/">Citation Management for Researchers Using Multilingual Materials, Part 1</a>
                                             </li>
-                                            <li>Citation Management for Researchers Using Multilingual Materials, Part 2</li>
+                                            <a href="https://researchcommons.library.ubc.ca/jurism2/">Citation Management for Researchers Using Multilingual Materials, Part 2</a>
+                                            </li>
                                         </ul></div>
                                    		
 
