--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name"><a href="https://ubc-library-rc.github.io/data-analysis-r/" target="_blank">Data Analysis in R</a></h4>
+                  <h4 class="menu-item-name"><a href="https://ubc-library-rc.github.io/data-analysis-r/" target="_blank">Data analysis & viz in R</a></h4>
                   <span class="menu-item-price"><a href="https://github.com/ubc-library-rc/data-analysis-r/" target="_blank">view in GitHub</a></span>
                   <p class="menu-item-description">Three 2-hour modules on using the R programming language. Includes an introduction to R and RStudio, tools for statistical analysis, and data visualization.</p>
                 </div>
@@ -137,11 +137,6 @@
 
     <footer class="footer">
       <nav class="footer-navigation">
-        <ul class="footer-navigation-list">
-   <li class="footer-navigation-item"><a href="https://ubc-library-rc.github.io/">Thing one</a></li>
-          <li class="footer-navigation-item"><a href="https://github.com/cashapp">Thing two</a></li>
-          <li class="footer-navigation-item"><a href="https://squareup.com/security">Thing three</a></li>
-       </ul>
       </nav>
     </footer>
 
