--- a/all.html
+++ b/all.html
@@ -61,6 +61,8 @@
                                         <li>
                                             <a href="https://ubc-library-rc.github.io/intro-web-scraping/">Introduction to Web Scraping</a>
                                         </li>
+					<li><a href="https://ubc-library-rc.github.io/intro-markdown/">Introduction to Markdown digital workflows</a.
+					</li>
                                     </ul></div>
 <div id="data" class="menu-category">
 
