--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </nav>
 
 			<div id="ds" class="menu-category">
-              <h3 class="menu-category-name">Core skills in Digital scholarship</h3>
+              <h3 class="menu-category-name">Core skills in Digital Scholarship (DS)</h3>
               <ol class="menu-category-list">
               <li class="menu-item">
                 <div class="menu-item-info">
