update event calendar link

--- a/all.html
+++ b/all.html
@@ -39,7 +39,7 @@
 
           <article class="profile-menu" id="menu">
             <nav class="menu-navigation">
-				<p>For currently scheduled workshops visit <a href="https://events.library.ubc.ca/">https://events.library.ubc.ca/</a></p><br/>
+				<p>For currently scheduled workshops visit <a href="https://researchcommons.library.ubc.ca/events/">https://researchcommons.library.ubc.ca/events/</a></p><br/>
 		  <p>The format and amount of online material varies from one workshop to another. For a list of workshops with extensive online content suitable for self-paced learning see <a href="index.html">selected workshop materials in open formats</a>.</p>   
             </nav>
 
