fix link to intro-git workshop

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name"><a href="https://ubc-library-rc.github.io/" target="_blank">Introduction to Git and GitHub</a></h4>
+                  <h4 class="menu-item-name"><a href="https://ubc-library-rc.github.io/intro-git" target="_blank">Introduction to Git and GitHub</a></h4>
                   <span class="menu-item-price"><a href="https://github.com/ubc-library-rc/intro-git" target="_blank">view in GitHub</a></span>
                   <p class="menu-item-description">Adapted from the Carpentries, introduces the basics of Git and GitHub for version control and collaboration.</p>
                 </div>
