--- a/all.html
+++ b/all.html
@@ -156,10 +156,10 @@
 											<h3 class="menu-category-name">Citation management</h3>
                                             <ul>
                                             <li>
-                                                <a href="https://research-commons-2019.sites.olt.ubc.ca/beginner/">Choose the right Citation Management Tool for your Research (Beginner)</a>
+                                                <a href="https://ubc-library-rc.github.io/intro-citation/">Choose the right Citation Management Tool for your Research (Beginner)</a>
                                             </li>
                                             <li>
-                                                <a href="https://research-commons-2019.sites.olt.ubc.ca/refworks/">Citation Management using RefWorks (Intermediate)</a>
+                                                <a href="https://ubc-library-rc.github.io/intro-refworks/">Citation Management using RefWorks (Intermediate)</a>
                                             </li>
                                             <li>
                                                 <a href="https://ubc-library-rc.github.io/intro-zotero/">Citation Management using Zotero (Intermediate)</a>
