edited two GIS links

--- a/all.html
+++ b/all.html
@@ -194,13 +194,13 @@
                 </li>
                 <li>
                   <a
-                    href="https://github.com/ubc-lib-geo/Data-Normalization-Classification"
+                    href="https://ubc-lib-geo.github.io/Data-Normalization-Classification/"
                     >GIS Data Normalization and Classification</a
                   >
                 </li>
                 <li>
                   <a
-                    href="https://github.com/ubc-library-rc/intro-to-arcgis-pro"
+                    href="https://ubc-library-rc.github.io/intro-to-arcgis-pro/"
                     >Introduction to ArcGIS Pro</a
                   >
                 </li>
@@ -225,8 +225,7 @@
                 </li>
               </ul>
             </div>
-            
-           
+
             <div id="citation" class="menu-category">
               <h3 class="menu-category-name">Citation management</h3>
               <ul>
