--- a/all.html
+++ b/all.html
@@ -230,23 +230,23 @@
               <h3 class="menu-category-name">Citation management</h3>
               <ul>
                 <li>
-                  <a href="https://ubc-library-rc.github.io/intro-citation/"
+                  <a href="https://researchcommons.library.ubc.ca/beginner/"
                     >Choose the right Citation Management Tool for your Research
                     (Beginner)</a
                   >
                 </li>
                 <li>
-                  <a href="https://ubc-library-rc.github.io/intro-refworks/"
+                  <a href="https://researchcommons.library.ubc.ca/refworks/"
                     >Citation Management using RefWorks (Intermediate)</a
                   >
                 </li>
                 <li>
-                  <a href="https://ubc-library-rc.github.io/intro-zotero/"
+                  <a href="https://researchcommons.library.ubc.ca/citation-management-using-zotero-intermediate/"
                     >Citation Management using Zotero (Intermediate)</a
                   >
                 </li>
                 <li>
-                  <a href="https://ubc-library-rc.github.io/intro-mendeley/"
+                  <a href="https://researchcommons.library.ubc.ca/citation-management-using-mendeley-intermediate/"
                     >Citation Management using Mendeley (Intermediate)</a
                   >
                 </li>
