--- a/all.html
+++ b/all.html
@@ -65,9 +65,7 @@
                 The format and amount of online material varies from one
                 workshop to another. For a list of workshops with extensive
                 online content suitable for self-paced learning see
-                <a href="index.html"
-                  >selected workshop materials in open formats</a
-                >.
+                <a href="index.html">selected workshop materials in open formats</a>.
               </p>
             </nav>
 
@@ -76,50 +74,56 @@
                 Core skills in Digital Scholarship
               </h3>
               <ul>
-                <li>
-                  <a href="https://ubc-library-rc.github.io/intro-git/"
-                    >Introduction to Git and GitHub</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="https://ubc-library-rc.github.io/intro-shell/content/04-automating-with-loops.html"
-                    >Introduction to the Unix Shell</a
-                  >
-                </li>
-                <li>
-                  <a href="https://ubc-library-rc.github.io/intro-api/"
-                    >Introduction to APIs</a
-                  >
-                </li>
-                <li>
-                  <a
-                    href="https://ubc-library-rc.github.io/intro-project-sites/"
-                    >Building a project website with Jekyll and Github Pages</a
-                  >
-                </li>
-                <li>
-                  <a href="https://ubc-library-rc.github.io/intro-web-scraping/"
-                    >Introduction to Web Scraping</a
-                  >
-                </li>
-
-                <li>
-                  <a href="https://ubc-library-rc.github.io/intro-markdown/"
-                    >Introduction to Markdown digital workflows</a
-                  >.
-                </li>
+                <li><a href="https://ubc-library-rc.github.io/intro-git/">Introduction to Git and GitHub</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-shell/">Introduction to the Unix Shell</a></li>
+                <li><a href="https://ubc-library-rc.github.io/advanced-shell/">Intermediate Unix Shell</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-api/">Introduction to APIs</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-project-sites/" >Building a project website with Jekyll and Github Pages</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intermediate-Jekyll/">Intermediate Jekyll</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-web-scraping/">Introduction to Web Scraping Concepts</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-web-scraping-Python/">Introduction to Web Scraping with Python</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-markdown/">Introduction to Markdown digital workflows</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-development-environment/">Setting up a Development Environment</a></li>
+                <li><a href="https://github.com/ubc-library-rc/intro-docker">Introduction to Docker</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-text-analysis/">Introduction to Text Analysis with Voyant and NLTK</a></li>
+                <li><a href="https://github.com/ubc-library-rc/intro-regex">Introduction to Regular Expressions</a></li>
               </ul>
             </div>
+            <div id="ds" class="menu-category">
+              <h3 class="menu-category-name">
+                Digital Toolkit: survey sessions on tools in Digital Scholarship
+              </h3>
+              <ul>
+                <li><a href="https://ubc-library-rc.github.io/digital-exhibits-survey/">Survey of Digital Exhibit tools"</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-jupyter/">Introduction to Jupyter Notebooks</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-voyant/">Introduction to Voyant Tools</a></li>
+                <li><a href="https://github.com/ubc-library-rc/citizen-science-tools">Survey of Citizen Science tools and platforms</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-twine/">Introduction to Digital Storytelling with Twine</a></li>
+                <li><a href="https://github.com/ubc-library-rc/intro-htrc">HathiTrust’s Data and Analysis Tools for Text Mining Research</a></li>
+                <li><a href="https://ubc-library-rc.github.io/workflow-tools/">Survey of common Digital Workflow tools for projects</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-wax/">Introduction to Minimal Digital Exhibits with Wax</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-audacity/">Introduction to Podcasting with Audacity</a></li>
+                <li><a href="https://github.com/ubc-library-rc/intro-wiki">Working with Wikipedia and Wikidata</a></li>
+                <li><a href="https://github.com/ubc-library-rc/intro-omeka">Building Digital Exhibits with Omeka</a></li>
+                <li><a href="https://github.com/ubc-library-rc/minimal-exhibits">Introduction to Minimal Computing tools for digital exhibits</a></li>
+                <li><a href="https://ubc-library-rc.github.io/research-workflows-digital-storytelling/">Research workflows, tools, and data management for Digital Storytelling</a></li>
+        </ul>
+
+        <div id="ds" class="menu-category">
+          <h3 class="menu-category-name">
+            Special Topics in Digital Scholarship
+          </h3>
+          <ul>
+            <li><a href="https://github.com/ubc-library-rc/intro-blockchain-research">Introduction to Blockchain research skills</a></li>
+        </ul>
+      </div>
             <div id="data" class="menu-category">
               <h3 class="menu-category-name">
                 Data analysis and visualization
               </h3>
               <ul>
                 <li>
-                  <a href="https://ubc-library-rc.github.io/nvivo1"
-                    >NVivo (qualitative data analysis, two modules)</a
-                  >
+                  <a href="https://ubc-library-rc.github.io/nvivo1">NVivo (qualitative data analysis, two modules)</a>
                 </li>
                 <li>
                   <a href="https://ubc-library-rc.github.io/data-analysis-r/"
