--- a/all.html
+++ b/all.html
@@ -95,19 +95,19 @@
               </h3>
               <ul>
                 <li><a href="https://ubc-library-rc.github.io/digital-exhibits-survey/">Survey of Digital Exhibit tools"</a></li>
+                <li><a href="https://ubc-library-rc.github.io/intro-wax/">Introduction to Minimal Digital Exhibits with Wax</a></li>
+                <li><a href="https://github.com/ubc-library-rc/intro-omeka">Building Digital Exhibits with Omeka</a></li>
                 <li><a href="https://ubc-library-rc.github.io/intro-jupyter/">Introduction to Jupyter Notebooks</a></li>
                 <li><a href="https://ubc-library-rc.github.io/intro-voyant/">Introduction to Voyant Tools</a></li>
                 <li><a href="https://github.com/ubc-library-rc/citizen-science-tools">Survey of Citizen Science tools and platforms</a></li>
                 <li><a href="https://ubc-library-rc.github.io/intro-twine/">Introduction to Digital Storytelling with Twine</a></li>
                 <li><a href="https://github.com/ubc-library-rc/intro-htrc">HathiTrust’s Data and Analysis Tools for Text Mining Research</a></li>
                 <li><a href="https://ubc-library-rc.github.io/workflow-tools/">Survey of common Digital Workflow tools for projects</a></li>
-                <li><a href="https://ubc-library-rc.github.io/intro-wax/">Introduction to Minimal Digital Exhibits with Wax</a></li>
                 <li><a href="https://ubc-library-rc.github.io/intro-audacity/">Introduction to Podcasting with Audacity</a></li>
                 <li><a href="https://github.com/ubc-library-rc/intro-wiki">Working with Wikipedia and Wikidata</a></li>
-                <li><a href="https://github.com/ubc-library-rc/intro-omeka">Building Digital Exhibits with Omeka</a></li>
-                <li><a href="https://github.com/ubc-library-rc/minimal-exhibits">Introduction to Minimal Computing tools for digital exhibits</a></li>
                 <li><a href="https://ubc-library-rc.github.io/research-workflows-digital-storytelling/">Research workflows, tools, and data management for Digital Storytelling</a></li>
-        </ul>
+                <li><a href="https://ubc-library-rc.github.io/creating-xml-files-in-oxygen/">Introduction to TEI and creating XML Files in Oxygen</a></li>
+               </ul>
 
         <div id="ds" class="menu-category">
           <h3 class="menu-category-name">
