Update link to excel workshops

--- a/index.html
+++ b/index.html
@@ -251,14 +251,14 @@
                   <div class="menu-item-info">
                     <h4 class="menu-item-name">
                       <a
-                        href="https://ubc-library-rc.github.io/excel1/"
+                        href="https://ubc-library-rc.github.io/excel/"
                         target="_blank"
                         >Working with data in Excel</a
                       >
                     </h4>
                     <span class="menu-item-price"
                       ><a
-                        href="https://github.com/ubc-library-rc/excel1/"
+                        href="https://github.com/ubc-library-rc/excel/"
                         target="_blank"
                         >view in GitHub</a
                       ></span
